--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
@@ -24,6 +24,7 @@
             <a href="#" class="first-block">Home</a>
             <a href="#" class="first-block">Contact Us</a>
             <a href="#" class="second-block">Gallery</a>
+            <a href="#" class="second-block" id="english-flag"><img src="./images/english.png" alt="English"></a>
           </ul>
         </nav>
         <!-- nav for small screens -->
@@ -63,6 +64,21 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
+      </section>
+      <hr>
+
+      <section id="gallery">
+        <div class="row">
+          <div>
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="gallery-img"><img src="https://via.placeholder.com/350"></div>
+          <div class="gallery-img"><img src="https://via.placeholder.com/350"></div>
+          <div class="gallery-img"><img src="https://via.placeholder.com/350"></div>
+        </div>
+
       </section>
       <hr>
     </div>
